geredo splascreen, falta acerta solicitao

--- a/src/app/tab2-details/tab2-details.page.html
+++ b/src/app/tab2-details/tab2-details.page.html
@@ -128,14 +128,14 @@
       <ion-row>
         <ion-col padding size="6">
           <div class="apt-mat" [routerLink]="['apt-mat']">
-            <ion-icon name="cube"></ion-icon>
+            <ion-icon style="font-size: 40px;" name="cube"></ion-icon>
             <span>Apontamento de Materiais</span>
           </div>
         </ion-col>
 
         <ion-col padding size="6">
           <div class="apt-hora" [routerLink]="['apt-hora']">
-            <ion-icon name="time"></ion-icon>
+            <ion-icon style="font-size: 40px;" name="time"></ion-icon>
             <span>Apontamento de Horas</span>
           </div>
         </ion-col>
@@ -144,14 +144,14 @@
       <ion-row>
         <ion-col padding size="6">
           <div class="tarefas" [routerLink]="['tarefa']">
-            <ion-icon name="hammer"></ion-icon>
+            <ion-icon style="font-size: 40px;" name="hammer"></ion-icon>
             <span>Retorno de Tarefas</span>
           </div>
         </ion-col>
 
         <ion-col padding size="6">
           <div class="images" [routerLink]="['img']">
-            <ion-icon name="images"></ion-icon>
+            <ion-icon style="font-size: 40px;" name="images"></ion-icon>
             <span>Gerenciamento de Imagens</span>
           </div>
         </ion-col>
