--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,7 +15,8 @@
   <ion-row>
 
     <div class="wrapper" (click)="scanQrcode()">
-      <ion-icon name="barcode"></ion-icon>
+      <img style="width: 30px;" class="qrcode" src="../../assets/img/qrcode.png">
+
     </div>
 
     <ion-col size="10">
