--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -4,46 +4,46 @@
       <div>
         <img class="logo" src="assets/img/logosmall.png">
       </div>
-        <ion-title>
-          Home
-        </ion-title>
+      <ion-title>
+        Home
+      </ion-title>
     </ion-row>
   </ion-toolbar>
 </ion-header>
 
 <ion-content fullscreen class="ion-padding">
-    <h4 class="bemvindo">Seja Bem Vindo(a)!</h4>
-    <ion-card color="light">
+  <h4 class="bemvindo">Seja Bem Vindo(a)!</h4>
+  <ion-card color="light">
     <ion-card-content>
-           <ion-text color="dark">
-            <p class="nome" > {{nome}} </p>
-           </ion-text>
-           <ion-note color="primary"> {{logincliente}}</ion-note>
-    </ion-card-content>
-    </ion-card>
-<h4 class="bemvindo">Comunicados</h4>
-<ion-slides [options]="slideOpts" loop=true mode="ios">
-    <ion-slide *ngFor="let item of cominicados"  style="width: 100%">
-        <ion-text color="dark">
-          <h4 >{{item.title}}</h4>
-          <ion-note>{{item.description}}</ion-note>
+      <ion-text color="dark">
+        <p class="nome"> {{nome}} </p>
       </ion-text>
-        <br>
-      </ion-slide> slide 1
+      <ion-note color="primary"> {{logincliente}}</ion-note>
+    </ion-card-content>
+  </ion-card>
+  <h4 class="bemvindo">Comunicados</h4>
+  <ion-slides [options]="slideOpts" loop=true mode="ios">
+    <ion-slide *ngFor="let item of cominicados" style="width: 100%">
+      <ion-text color="dark">
+        <h4>{{item.title}}</h4>
+        <ion-note>{{item.description}}</ion-note>
+      </ion-text>
+      <br>
+    </ion-slide>
 
-</ion-slides>
-<ion-grid fixed  *ngIf="(tipoacesso === '1') ">
-  <ion-row>
-    <ion-col size="6">
-    <ion-button fill="block"  (click)="openModalSolicitation()" shape="round">
-    Listar Solicitacoes
-    </ion-button>
-  </ion-col>
-    <ion-col size="6">
-        <ion-button   fill="block"  (click)="openModalSolicitationCreat()"  shape="round">
-            Abrir Solicitação
-          </ion-button>
-    </ion-col>
-  </ion-row>
-</ion-grid>
+  </ion-slides>
+  <ion-grid fixed *ngIf="(tipoacesso === '1') ">
+    <ion-row>
+      <ion-col size="6">
+        <ion-button size="small" fill="solid" (click)="openModalSolicitation()" shape="round">
+          Listar Solicitacoes
+        </ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <ion-button size="small" fill="solid" (click)="openModalSolicitationCreat()" shape="round">
+          Abrir Solicitação
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
