--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -21,8 +21,7 @@
 
     <ion-col size="10">
       <div class="container">
-        <ion-searchbar [(ngModel)]="userFilter.ordem || userFilter.Data" animated placeholder="Pesquisar Ordens"
-          [value]='barcode'>
+        <ion-searchbar [(ngModel)]="userFilter.ordem" animated placeholder="Pesquisar Ordens" [value]='barcode'>
         </ion-searchbar>
       </div>
     </ion-col>
