--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -35,7 +35,7 @@
   <ion-grid fixed *ngIf="(tipoacesso === '1') ">
     <ion-row>
       <ion-col size="6">
-        <ion-button size="small" fill="solid" (click)="openModalSolicitation()" shape="round">
+        <ion-button size="small" fill="solid" (click)="openSolicitations()" shape="round">
           Listar Solicitacoes
         </ion-button>
       </ion-col>
