--- a/src/app/tab2-tarefa/tab2-tarefa.page.html
+++ b/src/app/tab2-tarefa/tab2-tarefa.page.html
@@ -48,7 +48,7 @@
               <ion-label>Status</ion-label>
             </ion-col>
             <ion-col size="5">
-              <P class="custom"> {{ entities.legenda }}</P>
+              <P class="custom"> {{ entities.status }}</P>
             </ion-col>
 
             <ion-col size="2">
