--- a/src/app/tab2-form-solicitations/tab2-form-solicitations.page.html
+++ b/src/app/tab2-form-solicitations/tab2-form-solicitations.page.html
@@ -130,15 +130,17 @@
 
       <ion-item (click)="selectImageInCamera()">
 
-
-
         <ion-icon style="font-size: 49px;" slot="start" ios="ios-camera" md="md-camera"></ion-icon>
         <ion-label>Anexar Imagem: <ion-text color="danger"> * </ion-text>
-          {{myPorcents | async }} %
+          <ion-progress-bar *ngIf="myPorcents" [value]="myPorcents | async"></ion-progress-bar>
+          Fazendo upload.. {{myPorcents | async }} %
+          <p>{{imagem | async}}</p>
         </ion-label>
         <ion-input type="text" formControlName="imagem" id="imagem">
         </ion-input>
-        <ion-img *ngIf="imagem" [src]="imagem | async"></ion-img>
+        <ion-avatar>
+          <ion-img *ngIf="foto" [src]="foto"></ion-img>
+        </ion-avatar>
       </ion-item>
 
 
