--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,19 +14,19 @@
         <ion-item>
           <ion-label position="stacked">Login <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-input required formControlName="login" value="user" type="text"></ion-input>
+          <ion-input required formControlName="login" value="{{api.getCredentials().login}}" type="text"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="stacked">Senha <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-input required formControlName="senha" value="authorization" type="{{ type }}">
+          <ion-input required formControlName="senha" value="{{api.getCredentials().authorization}}" type="{{ type }}">
 
           </ion-input>
-          <ion-button slot="end" class="eye" *ngIf="!showPass" (click)="showPassword()" fill="clear">
+          <ion-button slot="end" class="eye" *ngIf="showPass" (click)="showPassword()" fill="clear">
             <ion-icon name="eye"></ion-icon>
           </ion-button>
-          <ion-button slot="end" class="eye" *ngIf="showPass" (click)="showPassword()" fill="clear">
+          <ion-button slot="end" class="eye" *ngIf="!showPass" (click)="showPassword()" fill="clear">
             <ion-icon name="eye-off"></ion-icon>
           </ion-button>
 
