--- a/src/app/tab2-details/tab2-details.page.scss
+++ b/src/app/tab2-details/tab2-details.page.scss
@@ -11,6 +11,10 @@ div{
     align-items: center;
     text-align: center;
 }
+span{
+    font-weight: bold;
+    font-size: 14px;
+}
 .apt-mat{
 
     border-radius: 100%;
