--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,8 +1,17 @@
 .bemvindo{
  padding-left: 15px;
  padding-top: 0px;
- padding-bottom: 0px
+ padding-bottom: 0px;
+color: #416b00
 }
 .nome{
 font-weight: 600
+}
+
+div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
