--- a/src/app/tab2-details/tab2-details.page.html
+++ b/src/app/tab2-details/tab2-details.page.html
@@ -126,14 +126,14 @@
 
     <ion-grid>
       <ion-row>
-        <ion-col padding size="6">
+        <ion-col class="ion-padding" size="6">
           <div class="apt-mat" [routerLink]="['apt-mat']">
             <ion-icon style="font-size: 40px;" name="cube"></ion-icon>
             <span>Apontamento de Materiais</span>
           </div>
         </ion-col>
 
-        <ion-col padding size="6">
+        <ion-col class="ion-padding" size="6">
           <div class="apt-hora" [routerLink]="['apt-hora']">
             <ion-icon style="font-size: 40px;" name="time"></ion-icon>
             <span>Apontamento de Horas</span>
@@ -142,14 +142,14 @@
       </ion-row>
 
       <ion-row>
-        <ion-col padding size="6">
+        <ion-col class="ion-padding" size="6">
           <div class="tarefas" [routerLink]="['tarefa']">
             <ion-icon style="font-size: 40px;" name="hammer"></ion-icon>
             <span>Retorno de Tarefas</span>
           </div>
         </ion-col>
 
-        <ion-col padding size="6">
+        <ion-col class="ion-padding" size="6">
           <div class="images" [routerLink]="['img']">
             <ion-icon style="font-size: 40px;" name="images"></ion-icon>
             <span>Gerenciamento de Imagens</span>
