acerta assinatura bu

--- a/src/app/tab2-details/tab2-details.page.html
+++ b/src/app/tab2-details/tab2-details.page.html
@@ -144,7 +144,7 @@
       <ion-row>
         <ion-col class="ion-padding" size="6">
           <div class="tarefas" [routerLink]="['tarefa']">
-            <ion-icon style="font-size: 40px;" name="hammer"></ion-icon>
+            <ion-icon style="font-size: 40px;" name="md-checkbox-outline"></ion-icon>
             <span>Retorno de Tarefas</span>
           </div>
         </ion-col>
