--- a/src/app/tab2-form/tab2-form.page.html
+++ b/src/app/tab2-form/tab2-form.page.html
@@ -88,20 +88,10 @@
       <ion-toggle slot="end" color="tertiary" (ionChange)="checkValue($event)" value="yes"></ion-toggle>
     </ion-item>
 
-    <ion-label *ngIf="assinaturafuncbase64">
-      <p>Ass Funcionário: </p>
-      <img [src]='assinaturafuncbase64'>
-    </ion-label>
-
-    <ion-label *ngIf="assinaturaclientebase64">
-      <p>Ass Client: </p>
-      <img [src]='assinaturaclientebase64'>
-    </ion-label>
-
     <br>
     <ion-row [ngClass]="{'drawing-active': isDrawing, 'esconder': showAssinatura}">
-      <ion-col>Ass. Cliente: </ion-col>
       <ion-col>
+        <ion-label slot="start"> Ass. Cliente:</ion-label>
         <signature-pad #Assinaturacliente [options]="signaturePadOptions" (onBeginEvent)="drawStartClient()"
           (onEndEvent)="drawCompleteClient()">
         </signature-pad>
@@ -110,23 +100,24 @@
         <ion-button color="danger" (click)="clearPadClient()">Limpar</ion-button>
         <ion-button color="secondary" (click)="savePadClient()">Salvar</ion-button>
       </ion-col>
-      <ion-col>
-        <ion-col width-100>
-          <ion-input type="text" formControlName="signaturecliente" [value]="signaturecliente" id="signaturecliente">
-          </ion-input>
-          <ion-img *ngIf="signaturecliente" [src]="signaturecliente"></ion-img>
-        </ion-col>
+      <ion-col width-100>
+        <!--    <img *ngIf="imageForm.controls.image1.value" formControlName="image1" src="{{imageForm.controls.image1.value}}">
+ -->
+        <ion-input type="image" accept="image/*" formControlName="signaturecliente" id="signaturecliente">
+        </ion-input>
+        <ion-input type="image" formControlName="signaturecliente"></ion-input>
 
       </ion-col>
+      <ion-img *ngIf="signaturecliente" [src]="signaturecliente"></ion-img>
     </ion-row>
-
-
 
     <!--  Inicio func-->
 
     <ion-row [ngClass]="{'drawing-active': isDrawing, 'esconder2': showAssinatura}">
-      <ion-col>Ass. Funcionário: </ion-col>
+
       <ion-col>
+        <ion-label slot="start"> Ass. Funcionário:</ion-label>
+
         <signature-pad #Assfuncionario [options]="signaturePadOptions" (onBeginEvent)="drawStartFunc()"
           (onEndEvent)="drawCompleteFunc()">
         </signature-pad>
@@ -135,14 +126,15 @@
         <ion-button color="danger" (click)="clearPadFunc()">Limpar</ion-button>
         <ion-button color="secondary" (click)="savePadFunc()">Salvar</ion-button>
       </ion-col>
-      <ion-col>
-        <ion-col width-100>
-          <ion-input type="text" formControlName="signaturefuncionario" [value]="signaturefuncionario"
-            id="signaturefuncionario">
-          </ion-input>
-          <ion-img *ngIf="signaturefuncionario" [src]="signaturefuncionario"></ion-img>
-        </ion-col>
+
+      <ion-col width-100>
+        <ion-input type="file" accept="image/*" formControlName="signaturefuncionario" id="signaturefuncionario">
+        </ion-input>
       </ion-col>
+
+      <ion-img *ngIf="signaturefuncionario" [src]="signaturefuncionario">
+      </ion-img>
+
     </ion-row>
 
 
